juno/qa/apps/portal-ui-release-cqdg-662/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-ui-release-cqdg-662
  name: portal-ui-release-cqdg-662
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal-ui-release-cqdg-662
  template:
    metadata:
      labels:
        app: portal-ui-release-cqdg-662
    spec:
      imagePullSecrets:
      - name: images-pull
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-portal-ui:feature-cqdg-662-57496ee-1712083717 # {"$imagepolicy": "cqdg-qa-fluxcd:portal-ui-release-cqdg-662"}
        name: portal-ui-release-cqdg-662
        resources:
          requests:
            memory: "256Mi"
            cpu: '0.50'
          limits:
            memory: "512Mi"
            cpu: '1.00'
