juno/qa/apps/portal-ui-release-cqdg-662/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal-ui-release-cqdg-662
  name: portal-ui-release-cqdg-662
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: portal-ui-release-cqdg-662
